# v8-android

./: .gitattributes  LICENSE  README.md
jni-test/app/: CMakeLists.txt  build.gradle
jni-test/app/src/androidTest/java/org/cmdr2/jnitest/: ExampleInstrumentedTest.java
jni-test/app/src/main/: AndroidManifest.xml
jni-test/app/src/main/cpp/: native-lib.cpp
jni-test/app/src/main/java/org/cmdr2/jnitest/: MyActivity.java
jni-test/app/src/main/res/layout/: activity_main.xml
jni-test/app/src/test/java/org/cmdr2/jnitest/: ExampleUnitTest.java
jni-test/gradle/wrapper/: gradle-wrapper.properties
